Add prepublish hook.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Listen to events from a Node.js EventEmitter.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "prepublishOnly": "mocha"
   },
   "repository": {
     "type": "git",
